--- a/package.json
+++ b/package.json
@@ -14,9 +14,11 @@
   "dependencies": {
     "bootstrap": "^4.3.1",
     "highlight.js": "^9.15.6",
-    "marked": "^0.6.1",
+    "jquery": "^1.9.1",
+    "marked": "^1.1.1",
+    "popper.js": "^1.16.1",
     "react": "^16.8.4",
-    "react-bootstrap": "^1.0.0-beta.5",
+    "react-bootstrap": "^1.3.0",
     "react-dom": "^16.8.4"
   },
   "devDependencies": {
@@ -26,7 +28,7 @@
     "babel-preset-react": "^6.24.1",
     "html-webpack-plugin": "^3.2.0",
     "webpack": "^4.29.6",
-    "webpack-cli": "^3.3.0",
-    "webpack-dev-server": "^3.2.1"
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0"
   }
 }
